1.0.13:
Sam Lantinga - Mon Apr 30 16:13:47 PDT 2001
 * Fixed error when updating a product in the current directory
Sam Lantinga - Sat Apr 28 16:39:45 PDT 2001
 * Allow the GPG signature verification to be cancelled
Sam Lantinga - Sat Apr 28 16:19:07 PDT 2001
 * Tell new update archives not to perform checksum verification
Sam Lantinga - Sat Apr 28 16:15:13 PDT 2001
 * Added the size of the current update to the download screen
Sam Lantinga - Sat Apr 28 15:48:27 PDT 2001
 * Don't pay attention to username and password in preferred urls
Sam Lantinga - Sat Apr 28 15:18:34 PDT 2001
 * Fixed crash when saving mirror while downloading multiple patches

1.0.12:
Sam Lantinga - Wed Apr 11 15:22:15 PDT 2001
 * Added a dynamically linked GTk user interface module as default
 * Added a --ui command line option to specify a UI loadable module

1.0.11:
Sam Lantinga - Wed Apr 11 15:22:15 PDT 2001
 * Separated user interface into loadable modules

1.0.10:
Sam Lantinga - Wed Apr  4 09:53:35 PDT 2001
 * You can pass an install directory as well as product on the command line
Sam Lantinga - Wed Apr  4 09:05:02 PDT 2001
 * Added multi-language detection for Heretic II
Sam Lantinga - Thu Mar  8 15:06:24 PST 2001
 * Fixed setting the temporary download path
Sam Lantinga - Thu Mar  8 14:56:22 PST 2001
 * Always use the effective user id for the home directory

1.0.9:
Sam Lantinga - Mon Feb 19 22:45:23 PST 2001
 * Perform updates fully automated when doing auto-updates

1.0.8
Sam Lantinga - Mon Feb 19 19:58:46 PST 2001
 * Fixed memory corruption with certain password protected URLs
Sam Lantinga - Thu Feb 15 18:14:17 PST 2001
 * Added a reminder to update setup.xml to the Makefile install rule
 * The url specified with --update_url applies to updating loki_update

1.0.7:
Sam Lantinga - Tue Feb 13 18:55:03 PST 2001
 * Added terminal-mode auto-update capability.
Sam Lantinga - Tue Feb 13 16:01:57 PST 2001
 * Write the home directory of the effective uid, so sudo works correctly.